# grpwk

./: .gitignore  .latexmkrc.  BC_readme.txt  CMakeCache.txt  CMakeLists.txt  Makefile  Prototype_Bigram.c  Prototype_Exec_Test.c  Prototype_exec.c  TEST  Udemegane_Debugfunc.c  Udemegane_Prototype.h  a.out  aho_cora.c  aho_cora.h  ahocorasick.c  ahocorasick.h  ahotext.c  ahotext.h  ahotrie.c  ahotrie.h  analyze.py  cmake_install.cmake  compile.sh  constructions.c  constructions.h  distance  edit_distance.c  edit_distance.sh  f.c  input.c  input1.c  input_win.c  itti.c  linked_list.c  linked_list.h  number_shape.sh  queue.c  queue.h  queue_test.c  (+12 more)
bitap/: bitap.c  bitap.h
data/: ABCD_0.txt  ABCD_1.txt  ABCD_2.txt  ABCD_3.txt  ABCD_4.txt  Two_0.txt  Two_1.txt  Two_2.txt  Two_3.txt  Two_4.txt  counter.py  dat0_in.txt  dat0_out  dat0_ref  dat1-1_in  dat1_in  dat1_ref  dat2_in  dat2_ref  dat3_in  dat3_ref  dat4_in  dat4_ref  itti.c  loop_test.c  main  numABCD.c  plactice_strstr.c  position.txt  str_T_test.c  twoAlpha.c
example/: Algorithm_template.c  BM+.c  BM.c  BM.h  BM2.c  BM3.c  BM_mt.c  a.out  algorithm.h  dat0_out.txt  grpwk.c  grpwk.h  test  test2  testMT  test_distance.c
example_code/: branchTest.c  new_file.c  template.c
itoi/: BM+.c  ahocora.c  ahocora.h  grpwk.c  grpwk.h  itoi.c  itoi.h  sunday.c  sunday.h
middlesub/: BM+.c  BM.h  dat0-一致箇所-log.txt  grpwk.c  grpwk.h  itoi.c
submission/: 4.tar  Makefile  adeumeru.c
submission_tex/: final.tex  keikaku.tex
submit/: grpwk.c  itoi.c  itoi.h
提出用/: 4.tar  ahocorasick.c  ahocorasick.h  ahotrie.c  ahotrie.h  (+4 more)
(+2 files in other folders)
